test post competence

--- a/vues/ajout_competence.html.twig
+++ b/vues/ajout_competence.html.twig
@@ -19,7 +19,7 @@
                     <!-- text input -->
                     <div class="form-group">
                       <label>Reference</label>
-                      <input type="text" name="reference" class="form-control" placeholder="A.X.X.">
+                      <input type="text" name="reference" id="reference" class="form-control" placeholder="A.X.X.">
                       
                       <label>Libelle</label>
                       <input type="text" name="libelle" class="form-control" placeholder="Libelle">
