--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -4,7 +4,7 @@
 <section class="content-header">
     <h1>
         Activites
-        <small>liste</small><button type="button" style="float:right, margin:0px" class="btn bg-orange btn-flat margin" action="/new" > Ajouter</button>
+        <small>liste</small><button type="button" style="float:right;margin:0px" class="btn bg-orange btn-flat margin"> Ajouter</button>
     </h1>
         </section>
 
@@ -36,7 +36,7 @@
                             <th>{{ activite.getDuree() }}</th>
                             <th>{{ activite.getLibelle() }}</th>
                             <th>{{ activite.getDescription() }}</th>
-                            <th>{% activite.getCompetences() %}</th>
+                            <th>{{ activite.getCompetences() }}</th>
                           </tr>
                         {% endfor %}
                     </tbody>
