--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -36,7 +36,7 @@
                             <th>{{ activite.getDuree() }}</th>
                             <th>{{ activite.getLibelle() }}</th>
                             <th>{{ activite.getDescription() }}</th>
-                            <th>{% foreach competence in activite.getCompetences() %}
+                            <th>{% for competence in activite.getCompetences() %}
                                  {{  competence.getReference() }}
                               {%  endforeach %}
                             </th>
