--- a/vues/ajout_competence.html.twig
+++ b/vues/ajout_competence.html.twig
@@ -22,20 +22,20 @@
                       <input type="text" name="reference" id="reference" class="form-control" placeholder="A.X.X.">
                       
                       <label>Libelle</label>
-                      <input type="text" name="libelle" class="form-control" placeholder="Libelle">
+                      <input type="text" name="libelle" id="libelle "class="form-control" placeholder="Libelle">
                       
                       <label>Description</label>
-                      <input type="text" name="description" class="form-control" placeholder="Description">
+                      <input type="text" name="description" id="description" class="form-control" placeholder="Description">
                     </div>
                     
                     <div class="form-group">
                       <div class="radio">
                         <label>
-                          <input type="radio" name="obligatoire" value="true" checked>
+                          <input type="radio" name="obligatoire" id="obligatoire" value="true" checked>
                           Obligatoire
                         </label>
                         <label>
-                          <input type="radio" name="obligatoire" value="false" checked>
+                          <input type="radio" name="obligatoire" id="obligatoire" value="false" checked>
                           Non-obligatoire
                         </label>      
                       </div>
