--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -4,7 +4,7 @@
 <section class="content-header">
     <h1>
         Activites
-        <small>liste</small><button type="button" style="float:right;margin:0px" class="btn bg-orange btn-flat margin"> Ajouter</button>
+        <small>liste</small><form method="GET" action="/new"><button type="button" style="float:right;margin:0px" class="btn bg-orange btn-flat margin"> Ajouter</button></form>
     </h1>
         </section>
 
