--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -35,7 +35,7 @@
       <header class="main-header">
 
         <!-- Logo -->
-        <a href="#" class="logo">  {# Retour acceuil #}
+        <a href="/" class="logo">  {# Retour acceuil #}
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>S</b>IOC</span>
           <!-- logo for regular state and mobile devices -->
