--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -5,7 +5,7 @@
 
     <h1>
         Compétences
-        <small>liste</small>
+        <small>liste</small><a href="competence/new" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin">Ajouter</a>
 
     </h1>
         </section>
