--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -23,6 +23,7 @@
                         <th>Numero</th>
                         <th>Annee</th>
                         <th>Libelle</th>
+                        <th>Nb d'eleves</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -31,6 +32,7 @@
                             <th>{{ promotion.getId() }}</th>
                             <th>{{ promotion.getAnnee() }}</th>
                             <th>{{ promotion.getLibelle() }}</th>
+                            <th></th>
                           </tr>
                         {% endfor %}
                     </tbody>
@@ -39,6 +41,7 @@
                         <th>Numero</th>
                         <th>Annee</th>
                         <th>Libelle</th>
+                        <th>Nb d'eleves</th>
                       </tr>
                     </tfoot>
                   </table>
