--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -90,7 +90,7 @@
             </li>
             <li class="treeview">
               <a href="{{ path('eleve') }}">
-                <i class="fa fa-user"></i> <span>Éleves</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-user"></i> <span>Élèves</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
             </li>
             <li class="treeview">
@@ -110,7 +110,7 @@
             </li>
             <li class="treeview">
               <a href="{{ path('eleve') }}">
-                <i class="fa fa-user"></i> <span>Éleves</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-user"></i> <span>Élèves</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
             </li>
             <li class="treeview">
