--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -89,11 +89,6 @@
               </a>
             </li>
             <li class="treeview">
-              <a href="{{ path('eleve') }}">
-                <i class="fa fa-user"></i> <span>Élèves</span> <i class="fa fa-angle-left pull-right"></i>
-              </a>
-            </li>
-            <li class="treeview">
               <a href="{{ path('stats') }}">
                 <i class="fa fa-pie-chart"></i> <span>Statistiques</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
@@ -108,11 +103,15 @@
                 <i class="fa fa-users"></i> <span>Promotions</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
             </li>
+            <!-- Affiche Eleve (Prof) -->
+            {{ {form.professeur_fiels is fedined ? form_widget{form.admin_field}}}}
             <li class="treeview">
               <a href="{{ path('eleve') }}">
                 <i class="fa fa-user"></i> <span>Élèves</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
             </li>
+            <!-- Afficher Prof & Eleve (Admin)-->
+            {{ {% form.admin_field is defined ? form_widget(form.admin_field)}}
             <li class="treeview">
               <a href="{{ path('professeur') }}">
                 <i class="fa fa-user"></i> <span>Professeurs</span> <i class="fa fa-angle-left pull-right"></i>
