--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -89,7 +89,7 @@
               </a>
             </li>
             <li class="treeview">
-              <a href="{{  }}">
+              <a href="{{'activite'}}">
                 <i class="fa_user-secret"></i> <span>Administration</span><i class="fa fa-angle-left pull-right"></i>
                   <li class="treeview">
                     <a href="{{ path('eleve') }}">
