--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -88,22 +88,18 @@
                 <i class="fa fa-users"></i> <span>Promotions</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
             </li>
+            <!--  Affiche Eleve (Prof)  -->
             <li class="treeview">
-              <a href="{{'activite'}}">
-                <i class="fa_user-secret"></i> <span>Administration</span><i class="fa fa-angle-left pull-right"></i>
-                  <li class="treeview">
-                    <a href="{{ path('eleve') }}">
-                      <i class="fa fa-user"></i> <span>Élèves</span> <i class="fa fa-angle-left pull-right"></i>
-                    </a>
-                  </li>
-
+              <a href="{{ path('eleve') }}">
+                <i class="fa fa-user"></i> <span>Élèves</span> <i class="fa fa-angle-left pull-right"></i>
+              </a>
             </li>
             <!--  Afficher Prof & Eleve (Admin) -->
-              <li class="treeview">
-                <a href="{{ path('professeur') }}">
-                  <i class="fa fa-user"></i> <span>Professeurs</span> <i class="fa fa-angle-left pull-right"></i>
-                </a>
-              </li>
+            <li class="treeview">
+              <a href="{{ path('professeur') }}">
+                <i class="fa fa-user"></i> <span>Professeurs</span> <i class="fa fa-angle-left pull-right"></i>
+              </a>
+            </li>
           </ul>
         </section>
         <!-- /.sidebar -->
