--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -4,7 +4,7 @@
 <section class="content-header">
     <h1>
         Activites
-        <small>liste</small><a href="activite/new" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-pie-chart"></i>Ajouter</a>
+        <small>liste</small><a href="activite/new" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-pie-chart"></i><span>Ajouter</span></a>
     </h1>
         </section>
 
