--- a/vues/ajout_activite.html.twig
+++ b/vues/ajout_activite.html.twig
@@ -19,16 +19,16 @@
                     <!-- text input -->
                     <div class="form-group">    
                       <label>Date de Debut</label>
-                      <input type="date" name="reference" class="form-control" placeholder="jj / mm / aa">
+                      <input type="date"  id="debut" name="debut" class="form-control" placeholder="jj / mm / aa">
                       
                       <label>Duree</label>
-                      <input type="text" name="duree" class="form-control" placeholder="jours/semaines/mois/années">
+                      <input type="text"  id="duree" name="duree" class="form-control" placeholder="jours/semaines/mois/années">
                       
                       <label>Libelle</label>
-                      <input type="text" name="libelle" class="form-control" placeholder="libelle">
+                      <input type="text"  id="libelle" name="libelle" class="form-control" placeholder="libelle">
                         
                       <label>Description</label>
-                      <input type="text" name="description" class="form-control" placeholder="Description">    
+                      <input type="text" id="description" name="description" class="form-control" placeholder="Description">
                     </div>
             
                     <div class="box-footer">
