--- a/vues/ajout_promotion.html.twig
+++ b/vues/ajout_promotion.html.twig
@@ -19,10 +19,10 @@
                     <!-- text input -->
                     <div class="form-group">
                       <label>Annee Scolaire</label>
-                      <input type="text" name="annee" class="form-control" placeholder="20xx-20xx">
+                      <input type="text" id="annee" name="annee" class="form-control" placeholder="20xx-20xx">
                       
                       <label>Libelle</label>
-                      <input type="text" name="libelle" class="form-control" placeholder="Libelle">
+                      <input type="text" id="libelle" name="libelle" class="form-control" placeholder="Libelle">
                     </div>
                     <div class="box-footer">
                         <button type="submit" class="btn btn-primary">Enregistrer</button>
