--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -19,10 +19,10 @@
                     <!-- text input -->
                     <div class="form-group">    
                       <label>Pseudo</label>
-                      <input type="text" name="username" class="form-control" placeholder="Pseudo">
+                      <input type="text" id="username" name="username" class="form-control" placeholder="Pseudo">
                     
                       <label>Mot de Passe</label>
-                      <input type="password" name="motdepasse" class="form-control" placeholder="password">
+                      <input type="password" id="" name="motdepasse" class="form-control" placeholder="password">
                         
                       <label>Nom</label>
                       <input type="text" name="nom" class="form-control" placeholder="Nom">
