--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -4,7 +4,7 @@
 <section class="content-header">
     <h1>
         Competences
-        <small>ajout</small><a href="promotion/new" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin">Ajouter</a>
+        <small>ajout</small><a href="promotion/new" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">Ajouter</span></a>
     </h1>
         </section>
 
