--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -5,7 +5,7 @@
 
     <h1>
         Compétences
-        <small>liste</small><a href="competence/new" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin">Ajouter</a>
+        <small>liste</small><a href="competence/new" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">Ajouter</span></a>
 
     </h1>
         </section>
