--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -70,20 +70,7 @@
             <li class="header">MENU</li>
             <li class="treeview">
               <a href="{{ path('activite') }}">
-                <i class="fa fa-wrench"></i> <span>Activités</span> <i class="fa fa-angle-left pull-right">
-                  <ul class="treeview-menu">
-                    <li>
-                      <a href="/activite">
-                        <i class="fa fa-circle-o"></i>Toutes les activités
-                      </a>
-                    </li>
-                    <li>
-                      <a href="/activite/new">
-                        <i class="fa fa-plus"></i>Ajouter
-                      </a>
-                    </li>
-                  </ul>
-                </i>
+                <i class="fa fa-wrench"></i> <span>Activités</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
             </li>
             <li class="treeview">
