--- a/vues/eleves.html.twig
+++ b/vues/eleves.html.twig
@@ -33,7 +33,7 @@
                           <tr>
                             <th>{{ eleve.getNom() }}</th>
                             <th>{{ eleve.getPrenom() }}</th>
-                            <th>{{ eleve.getEmail() }}</th>
+                            <th>{{ eleve.getMail() }}</th>
                             <th>{{ eleve.getLibelle() }}</th>
                             <th>{{ eleve.getAnnee() }}</th>
                           </tr>
