--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -9,7 +9,7 @@
         <section class="content">
           <div class="row">
             <div class="col-xs-12">
-                <h1>Bienvenue</h1><h2><!-- {{ user.getNom() }}, {{ user.getPrenom() }} --></h2>
+                <h1>Bienvenue</h1><h2></h2>
                 <div class="col-md-6">
                     <!-- Nbre d'activités -->
                     <div class="small-box bg-green">
