--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -10,6 +10,8 @@
           <div class="row">
             <div class="col-xs-12">
                 <h1>Bienvenue</h1><h2></h2>
+            </div>
+              <div class="row">
                 <div class="col-md-6">
                     <!-- Nbre d'activités -->
                     <div class="small-box bg-green">
@@ -76,9 +78,8 @@
                     </div>
                     <!-- /.nav-tabs-custom -->
                 </div>
-
-                </div>
-
+              </div>
+              <div class="row">
                 <div class="col-md-6">
                     <!-- Competences "%" -->
                     <div class="small-box bg-red">
@@ -247,9 +248,8 @@
                     </div>
                 </div><!-- /div Email -->
                 </div>
-
+              </div>
 
             </div><!-- /.col -->
-          </div><!-- /.row -->
         </section><!-- /.content -->
 {% endblock %}
