--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -26,9 +26,9 @@
                         Pour savoir plus <i class="fa fa-arrow-circle-right"></i>
                     </a>
                 </div>
-
+                </div>
                     <!-- Recentes Activites  -->
-
+                <div class="col-md-6">
                     <div class="nav-tabs-custom">
                         <ul class="nav nav-tabs">
                             <li class="active"><a href="#activity" data-toggle="tab">Activity</a></li>
