--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -12,7 +12,7 @@
                 <h1>Bienvenue</h1><h2></h2>
             </div>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-4 col-xs-6">
                     <!-- Nbre d'activités -->
                     <div class="small-box bg-green">
                     <div class="inner">
@@ -27,74 +27,79 @@
                     </a>
                 </div>
                 </div>
-                    <!-- Recentes Activites  -->
-                <div class="col-md-6">
-                    <div class="nav-tabs-custom">
-                        <ul class="nav nav-tabs">
-                            <li class="active"><a href="#activity" data-toggle="tab">Activity</a></li>
-                            <li><a href="#timeline" data-toggle="tab">Timeline</a></li>
-                            <li><a href="#settings" data-toggle="tab">Settings</a></li>
-                        </ul>
-                        <div class="tab-content">
-                            <div class="active tab-pane" id="activity">
-                                <!-- Post -->
-                                <div class="post">
-                                    <div class="user-block">
-                                        <img class="img-circle img-bordered-sm" src="../../dist/img/user1-128x128.jpg" alt="user image">
+                <div class="col-lg-4 col-xs-6">
+                      <!-- Competences "%" -->
+                      <div class="small-box bg-red">
+                          <div class="inner">
+                              <h3>100<sup style="font-size: 20px">%</sup></h3>
+                              <p>Unique Visitors</p>
+                          </div>
+                          <div class="icon">
+                              <i class="ion ion-pie-graph"></i>
+                          </div>
+                          <a href="/activite" class="small-box-footer">
+                              Pour voir toutes les activités <i class="fa fa-arrow-circle-right"></i>
+                          </a>
+                      </div>
+                </div>
+
+
+              </div>
+              <div class="row">
+
+                  <!-- Recentes Activites  -->
+                  <div class="col-md-6">
+                      <div class="nav-tabs-custom">
+                          <ul class="nav nav-tabs">
+                              <li class="active"><a href="#activity" data-toggle="tab">Activity</a></li>
+                              <li><a href="#timeline" data-toggle="tab">Timeline</a></li>
+                              <li><a href="#settings" data-toggle="tab">Settings</a></li>
+                          </ul>
+                          <div class="tab-content">
+                              <div class="active tab-pane" id="activity">
+                                  <!-- Post -->
+                                  <div class="post">
+                                      <div class="user-block">
+                                          <img class="img-circle img-bordered-sm" src="../../dist/img/user1-128x128.jpg" alt="user image">
                         <span class="username">
                           <a href="#">Jonathan Burke Jr.</a>
                           <a href="#" class="pull-right btn-box-tool"><i class="fa fa-times"></i></a>
                         </span>
-                                        <span class="description">Shared publicly - 7:30 PM today</span>
-                                    </div>
-                                    <!-- /.user-block -->
-                                    <p>
-                                        Lorem ipsum represents a long-held tradition for designers,
-                                        typographers and the like. Some people hate it and argue for
-                                        its demise, but others ignore the hate as they create awesome
-                                        tools to help create filler text for everyone from bacon lovers
-                                        to Charlie Sheen fans.
-                                    </p>
-                                    <ul class="list-inline">
-                                        <li><a href="#" class="link-black text-sm"><i class="fa fa-share margin-r-5"></i> Share</a></li>
-                                        <li><a href="#" class="link-black text-sm"><i class="fa fa-thumbs-o-up margin-r-5"></i> Like</a>
-                                        </li>
-                                        <li class="pull-right">
-                                            <a href="#" class="link-black text-sm"><i class="fa fa-comments-o margin-r-5"></i> Comments
-                                                (5)</a></li>
-                                    </ul>
+                                          <span class="description">Shared publicly - 7:30 PM today</span>
+                                      </div>
+                                      <!-- /.user-block -->
+                                      <p>
+                                          Lorem ipsum represents a long-held tradition for designers,
+                                          typographers and the like. Some people hate it and argue for
+                                          its demise, but others ignore the hate as they create awesome
+                                          tools to help create filler text for everyone from bacon lovers
+                                          to Charlie Sheen fans.
+                                      </p>
+                                      <ul class="list-inline">
+                                          <li><a href="#" class="link-black text-sm"><i class="fa fa-share margin-r-5"></i> Share</a></li>
+                                          <li><a href="#" class="link-black text-sm"><i class="fa fa-thumbs-o-up margin-r-5"></i> Like</a>
+                                          </li>
+                                          <li class="pull-right">
+                                              <a href="#" class="link-black text-sm"><i class="fa fa-comments-o margin-r-5"></i> Comments
+                                                  (5)</a></li>
+                                      </ul>
 
-                                    <input class="form-control input-sm" type="text" placeholder="Type a comment">
-                                </div>
-                                <!-- /.post -->
-                                <li>
-                                    <i class="fa fa-clock-o bg-gray"></i>
-                                </li>
-                                </ul>
-                            </div>
-                            <!-- /.tab-pane -->
-                        </div>
-                        <!-- /.tab-content -->
-                    </div>
-                    <!-- /.nav-tabs-custom -->
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                    <!-- Competences "%" -->
-                    <div class="small-box bg-red">
-                    <div class="inner">
-                        <h3>100<sup style="font-size: 20px">%</sup></h3>
-                        <p>Unique Visitors</p>
-                    </div>
-                    <div class="icon">
-                        <i class="ion ion-pie-graph"></i>
-                    </div>
-                    <a href="/activite" class="small-box-footer">
-                        Pour voir toutes les activités <i class="fa fa-arrow-circle-right"></i>
-                    </a>
-                </div>
+                                      <input class="form-control input-sm" type="text" placeholder="Type a comment">
+                                  </div>
+                                  <!-- /.post -->
+                                  <li>
+                                      <i class="fa fa-clock-o bg-gray"></i>
+                                  </li>
+                                  </ul>
+                              </div>
+                              <!-- /.tab-pane -->
+                          </div>
+                          <!-- /.tab-content -->
+                      </div>
+                      <!-- /.nav-tabs-custom -->
+                  </div>
 
+                  <div class="col-md-6">
                     <!-- Email -->
                     <div class="box box-info" style="position: relative;">
                     <div class="box-header ui-sortable-handle" style="cursor: move;">
@@ -247,7 +252,7 @@
                             <i class="fa fa-arrow-circle-right"></i></button>
                     </div>
                 </div><!-- /div Email -->
-                </div>
+                  </div>
               </div>
 
             </div><!-- /.col -->
