--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -4,12 +4,15 @@
 {% block content %}
     <section class="content-header">
         <div class="col-xs-12">
-            <h1>Bienvenue</h1><h2></h2>
+            <div class="box-header">
+                <h1>Bienvenue</h1><h2></h2>
+            </div>
         </div>
     </section>
 
         <!-- Main content -->
     <section class="content">
+        <div class="box-body">
           <div class="row">
             <div class="col-xs-12">
                 <h1>Bienvenue</h1><h2></h2>
@@ -257,5 +260,6 @@
               </div>
 
           </div><!-- /.col -->
+        </div><!-- box-body -->
     </section><!-- /.content -->
 {% endblock %}
