--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -3,9 +3,8 @@
 
 {% block content %}
     <section class="content-header">
-        <div class="col-xs-12">
             <div class="box-header">
-                <h1>Bienvenue</h1><h2></h2>
+                <h1>Bienvenue</h1><h2>, Jeune Padawan !</h2>
             </div>
         </div>
     </section>
