--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -3,7 +3,7 @@
 
 {% block content %}
     <section class="content-header">
-                <h1>Bienvenue</h1><h2>, Jeune Padawan !</h2>
+                <h1>Bienvenue,<small>Jeune Padawan !</small></h1>
     </section>
 
         <!-- Main content -->
