--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -14,8 +14,8 @@
                  <!-- Nbre d'activités -->
                  <div class="small-box bg-green">
                     <div class="inner">
-                        <h3>1337 Activités</h3>
-                        <p>Bounce Rate</p>
+                        <h3>1337</h3>
+                        <p>Nombre d'activités enregistrées</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
@@ -29,8 +29,8 @@
                  <!-- Competences "%" -->
                  <div class="small-box bg-red">
                      <div class="inner">
-                         <h3>100<sup style="font-size: 20px">%</sup></h3>
-                         <p>Unique Visitors</p>
+                         <h3>666<sup style="font-size: 20px">%</sup></h3>
+                         <p>Competences acquises</p>
                      </div>
                      <div class="icon">
                          <i class="ion ion-pie-graph"></i>
