--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -20,7 +20,7 @@
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
                     </div>
-                    <a href="/competences" class="small-box-footer">
+                    <a href="/activite" class="small-box-footer">
                         Pour savoir plus <i class="fa fa-arrow-circle-right"></i>
                     </a>
                 </div>
@@ -35,8 +35,8 @@
                      <div class="icon">
                          <i class="ion ion-pie-graph"></i>
                      </div>
-                        <a href="/activite" class="small-box-footer">
-                              Pour voir toutes les activités <i class="fa fa-arrow-circle-right"></i>
+                        <a href="/competence" class="small-box-footer">
+                              Pour en savoir plus <i class="fa fa-arrow-circle-right"></i>
                         </a>
                       </div>
              </div>
