--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -21,7 +21,7 @@
                         <i class="ion ion-stats-bars"></i>
                     </div>
                     <a href="/activite" class="small-box-footer">
-                        Pour savoir plus <i class="fa fa-arrow-circle-right"></i>
+                        Pour en savoir plus <i class="fa fa-arrow-circle-right"></i>
                     </a>
                 </div>
              </div>
@@ -100,7 +100,7 @@
                     <div class="box-header ui-sortable-handle" style="cursor: move;">
                         <i class="fa fa-envelope"></i>
 
-                        <h3 class="box-title">Quick Email</h3>
+                        <h3 class="box-title">Des questions ? Contactez votre professeur !</h3>
                         <!-- tools box -->
                         <div class="pull-right box-tools">
                             <button type="button" class="btn btn-info btn-sm" data-widget="remove" data-toggle="tooltip" title="" data-original-title="Remove">
@@ -114,7 +114,7 @@
                         <form action="#" method="post">
                             <!-- Destinataire -->
                             <div class="form-group">
-                                <input type="email" class="form-control" name="emailto" placeholder="Email to:">
+                                <input type="email" class="form-control" name="emailto" placeholder="Envoyé à :">
                             </div>
                             <!-- Objet -->
                             <div class="form-group">
@@ -122,7 +122,8 @@
                             </div>
                             <!-- Editeur de texte -->
                             <div>
-                                <ul class="wysihtml5-toolbar"><li class="dropdown">
+                                <ul class="wysihtml5-toolbar">
+                                    <li class="dropdown">
                                         <a class="btn btn-default dropdown-toggle " data-toggle="dropdown">
 
                                             <span class="glyphicon glyphicon-font"></span>
