--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -38,10 +38,23 @@
                         <a href="/competence" class="small-box-footer">
                               Pour en savoir plus <i class="fa fa-arrow-circle-right"></i>
                         </a>
-                      </div>
+                 </div>
              </div>
-
-
+             <div class="col-lg-4 col-xs-6">
+                  <!-- Promotion -->
+                  <div class="small-box bg-blue">
+                      <div class="inner">
+                          <h3>SIO<sup style="font-size: 20px">PTFQ</sup></h3>
+                          <p>2015-2016</p>
+                      </div>
+                      <div class="icon">
+                          <i class="ion ion-ios7-monitor-outline"></i>
+                      </div>
+                      <a class="small-box-footer">
+                          Services informatique aux organisations <i class="fa fa-arrow-circle-right"></i>
+                      </a>
+                  </div>
+             </div>
           </div>
               <div class="row">
                   <!-- Recent Activities  -->
