--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -48,7 +48,7 @@
                           <p>2015-2016</p>
                       </div>
                       <div class="icon">
-                          <i class="ion ion-ios7-monitor"></i>
+                          <i class="ion ion-document-text"></i>
                       </div>
                       <a class="small-box-footer">
                           Services informatique aux organisations <i class="fa fa-arrow-circle-right"></i>
