--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -60,13 +60,12 @@
                   <!-- Email -->
                   <div class="col-md-6">
                     <div class="box box-info" style="position: relative;">
-                    <div class="box-header ui-sortable-handle" style="cursor: move;">
+                    <div class="box-header ui-sortable-handle">
                         <i class="fa fa-envelope"></i>
 
                         <h3 class="box-title">Des questions ? Contactez votre professeur !</h3>
                         <!-- tools box -->
                         <div class="pull-right box-tools">
-                            <button type="button" class="btn btn-info btn-sm" data-widget="remove" data-toggle="tooltip" title="" data-original-title="Remove">
                                 <i class="fa fa-times"></i></button>
                         </div>
                         <!-- /. tools -->
