--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -51,7 +51,7 @@
                           <i class="ion ion-document-text"></i>
                       </div>
                       <a class="small-box-footer">
-                          Services informatique aux organisations <i class="fa fa-arrow-circle-right"></i>
+                          Services informatique aux organisations
                       </a>
                   </div>
              </div>
