--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -201,7 +201,7 @@
                         </form>
                     </div>
                     <div class="box-footer clearfix">
-                        <button type="button" class="pull-right btn btn-default" id="sendEmail">Send
+                        <button type="button" class="pull-right btn btn-default" id="sendEmail">Envoyer
                             <i class="fa fa-arrow-circle-right"></i></button>
                     </div>
                 </div><!-- /div Email -->
