--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -38,13 +38,13 @@
                     
                     <div class="form-group">
                       <div class="radio">
-                        <label>Statut</label>
+                        <label>Statut : </label>
                         <label>
-                          <input type="radio" name="eleve" value="true" checked>
+                          <input type="radio" name="eleve" value="false">
                           Un(e) Élève
                         </label>
                         <label>
-                          <input type="radio" name="professeur" value="false" checked>
+                          <input type="radio" name="professeur" value="false">
                           Un Professeur
                         </label>
                       </div>
