--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -40,11 +40,11 @@
                       <div class="radio">
                         <label>Statut : </label>
                         <label>
-                          <input type="radio" name="eleve" value="false">
+                          <input type="radio" name="eleve" value="false" checked>
                           Un(e) Élève
                         </label>
                         <label>
-                          <input type="radio" name="professeur" value="false">
+                          <input type="radio" name="professeur" value="false" checked>
                           Un Professeur
                         </label>
                       </div>
