--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -72,34 +72,34 @@
             <li class="header">MENU</li>
             <li class="treeview">
               <a href="{{ path('activite') }}">
-                <i class="fa fa-wrench"></i> <span>Activités</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-wrench"></i> <span>Activités</span></i>
               </a>
             </li>
             <li class="treeview">
               <a href="{{ path('competence') }}">
-                <i class="fa fa-graduation-cap"></i> <span>Compétences</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-graduation-cap"></i> <span>Compétences</span></i>
               </a>
             </li>
             <li class="treeview">
               <a href="{{ path('stats') }}">
-                <i class="fa fa-pie-chart"></i> <span>Statistiques</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-pie-chart"></i> <span>Statistiques</span></i>
               </a>
             </li>
             <li class="treeview">
               <a href="{{ path('promotion') }}">
-                <i class="fa fa-users"></i> <span>Promotions</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-users"></i> <span>Promotions</span></i>
               </a>
             </li>
             <!--  Affiche Eleve (Prof)  -->
             <li class="treeview">
               <a href="{{ path('eleve') }}">
-                <i class="fa fa-user"></i> <span>Élèves</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-user"></i> <span>Élèves</span></i>
               </a>
             </li>
             <!--  Afficher Prof & Eleve (Admin) -->
             <li class="treeview">
               <a href="{{ path('professeur') }}">
-                <i class="fa fa-user"></i> <span>Professeurs</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-user"></i> <span>Professeurs</span></i>
               </a>
             </li>
           </ul>
