--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -39,7 +39,8 @@
 
                   </form>
                 </div><!-- /.box-body -->
-            </div>
-        </div>
+            </div><!-- box -->
+        </div><!-- col -->
+      </div> <!-- row -->
     </section>
 {% endblock %}
