--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -22,7 +22,7 @@
                       <input type="text" id="username" name="username" class="form-control" placeholder="Pseudo">
                     
                       <label>Mot de Passe</label>
-                      <input type="password" id="" name="motdepasse" class="form-control" placeholder="password">
+                      <input type="password" id="password" name="password" class="form-control" placeholder="password">
                         
                       <label>Nom</label>
                       <input type="text" name="nom" class="form-control" placeholder="Nom">
